# smb-finsight

./: .gitignore  LICENSE  README.md  pyproject.toml  smb_finsight_config.toml
.github/workflows/: ci.yml
config/: standard_ca_aspe.toml  standard_fr_pcg.toml  standard_ifrs.toml  standard_us_gaap.toml
data/input/: accounting_entries_ca_aspe.csv  accounting_entries_fr_pcg.csv
data/mappings/: detailed_income_statement_pcg.csv  regular_income_statement_pcg.csv  simplified_income_statement_pcg.csv
data/mappings/legacy/: regular_income_statement_pcg.csv  simplified_income_statement_pcg.csv
data/reference/: ca_aspe.csv  fr_pcg.csv  ifrs.csv  us_gaap.csv
examples/: accounting_entries.csv  accounting_entries_large.csv
mapping/: income_statement_ca_aspe.csv  income_statement_fr_pcg.csv  income_statement_ifrs.csv  income_statement_us_gaap.csv  sig_fr_pcg.csv
ratios/: ratios_ca_aspe.toml  ratios_fr_pcg.toml  ratios_ifrs.toml  ratios_us_gaap.toml
src/smb_finsight/: __init__.py  accounts.py  cli.py  config.py  db.py  engine.py  entries_service.py  io.py  mapping.py  multi_periods.py  periods.py  ratios.py  views.py
tests/: test-accounts_basic.py  test_ca_aspe_standard.py  test_cases_extended.py  test_db.py  test_duplicate_resolution.py  test_engine.py  test_engine_core.py  test_ifrs_standard.py  test_mapping_template.py  test_multi_periods.py  test_periods.py  test_ratios.py  test_sig_consistency.py  test_sig_internal.py  test_us_gaap_standard.py  test_views_and_ordering.py
