
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smb-finsight"
version = "0.1.6"
description = "SMB FinSight - Financial Dashboard & Analysis application for SMBs"
authors = [{ name = "Maxence Bernard", email = "maxence@maxencebernardhub.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=2.0.0","numpy>=1.23.0"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]
exclude = [
  ".venv",
  ".ruff_cache",
  "src/smb_finsight.egg-info",
  "src/smb_finsight/__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true